[BAEL-5698] Article code